--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "@getbrevo/brevo": "^2.2.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.3.0",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
