--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^2.3.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
