--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.7",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.411.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,6 +30,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-tabs-scrollable": "^2.0.6",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
